--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="card-header">
               Best Reviewed
             </div>
+<!--             <img src="" class="card-img-top" alt="Image Provided by Zomato" id="z-image"> -->
               <div class="card-body">
               <h5 class="card-title" id="z-restaurant"></h5>
               <p class="card-text" id="z-address"></p>
@@ -38,6 +39,7 @@
             <div class="card-header">
               Loved by Locals
             </div>
+<!--             <img src="" class="card-img-top" alt="Image Provided by Yelp" id="y-image"> -->
               <div class="card-body">
               <h5 class="card-title" id="y-restaurant"></h5>
               <p class="card-text" id="y-address"></p>
