--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     <input type="text" id="user-event">
     <button class="btn btn-primary" type="submit" id="city-btn">Submit</button>
   </form>
+  <h2>Food</h2>
   <div class="row" id="food-display">
     <div class="col-sm-6">
       <div class="card">
         <div class="card-header">
           Best Reviewed
         </div>
-        <img src="" class="card-img-top" alt="Image Provided by Zomato" id="z-image">
-        <div class="card-body">
+<!--         <img src="" class="card-img-top" alt="Image Provided by Zomato" id="z-image">
+ -->        <div class="card-body">
           <h5 class="card-title" id="z-restaurant"></h5>
           <p class="card-text" id="z-address"></p>
         </div>
@@ -38,8 +39,8 @@
         <div class="card-header">
           Loved by Locals
         </div>
-        <img src="" class="card-img-top" alt="Image Provided by Yelp" id="y-image">
-        <div class="card-body">
+<!--         <img src="" class="card-img-top" alt="Image Provided by Yelp" id="y-image">
+ -->        <div class="card-body">
           <h5 class="card-title" id="y-restaurant"></h5>
           <p class="card-text" id="y-address"></p>
         </div>
@@ -48,6 +49,7 @@
   </div>
   </div> 
   <div id="events"></div>
+  <h2>Events</h2>
   <div class="row" id="tm-event-display">
     <div class="col-sm-6">
       <div class="card">
