--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <img src="" class="card-img-top" alt="" id="eb-image">
         <div class="card-body">
           <h5 class="card-title" id="eb-name"></h5>
-          <p class="card-text" id="eb-link"></p>
+          <p class="card-text" id="eb-date"></p>
         </div>
       </div>
     </div>
