--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  
   <form>
     <label for="user-city">City</label>
     <input type="text" id="user-city">
@@ -59,7 +60,7 @@
         <img src="" class="card-img-top" alt="" id="tm-image">
         <div class="card-body">
           <h5 class="card-title" id="tm-name"></h5>
-          <p class="card-text" id="tm-info"></p>
+          <p class="card-text" id="tm-date"></p>
         </div>
       </div>
     </div>
