food onclick selection pushes to database, username creation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-        <!-- Form for user intput -->
+        <!-- Form for user input -->
 
         <div class="row">
             <form>
@@ -36,7 +36,7 @@
                     <h2>Food</h2>
                     <div class="row" id="food-display">
                         <div class="col-sm-6">
-                            <div class="card choice">
+                            <div class="card choice" id="z-food-card">
                                 <div class="card-header">
                                     Best Reviewed
                                 </div>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="card choice">
+                            <div class="card choice food" id="y-food-card">
                                 <div class="card-header">
                                     Loved by Locals
                                 </div>
@@ -160,6 +160,11 @@
             </div>
         </div>
     </div>
+
+    <form>
+        <input type="text" name="" id="user-name">
+        <button class="btn btn-primary" type="submit" id="name-btn">Submit</button>
+    </form>
 
     <!-- Scripts -->
 
