updated firebase with event data

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h2>Events</h2>
                     <div class="row" id="tm-event-display">
                         <div class="col-sm-6">
-                            <div class="card choice">
+                            <div class="card choice" id="tm-card">
                                 <div class="card-header">
                                     Large Venue
                                 </div>
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div class="card choice">
+                            <div class="card choice" id="eb-card">
                                 <div class="card-header">
                                     Small Venue
                                 </div>
