--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hello, world!</title>
 </head>
@@ -13,8 +14,27 @@
 
     <div class="container">
 
-        <!-- Form for user input -->
+            <div class="card">
+                    <div class="card-header" id="user-selected">
+                        User Data
+                    </div>
+                    <div class="user-img">
+                        <img src="" class="card-img-top" alt="" id="">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title" id="">Food</h5>
+                        <p class="card-text test" id="user-food"></p>
+                        <p class="card-text test" id="user-food-address"></p>
+                        <h5 class="card-title" id="">Event</h5>
+                        <p class="card-text test" id="user-event"></p>
+                        <p class="card-text test" id="user-event-buy"></p>
+                        <h5 class="card-title" id="">Exercise</h5>
+                        <p class="card-text" id="user-exercise"></p>
+                    </div>
+                    <button class="btn btn-primary" type="submit" id="save-user-btn">Submit</button>
+                </div>
 
+        <!-- Form for user input -->
         <div class="row">
             <form>
                 <label for="user-city">City</label>
@@ -106,38 +126,38 @@
 
                 <div id="health">
                     <div class="container" id="events">
-                    <h2>Exercise</h2>
-                    <div class="row" id="">
-                        <div class="col-sm-6">
-                            <div class="card choice">
-                                <div class="card-header">
-                                    Sort Option 1
-                                </div>
-                                <div class="img-div">
-                                    <img src="" class="card-img-top" alt="" id="">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id=""></h5>
-                                    <p class="card-text" id=""></p>
+                        <h2>Exercise</h2>
+                        <div class="row" id="">
+                            <div class="col-sm-6">
+                                <div class="card choice">
+                                    <div class="card-header">
+                                        Sort Option 1
+                                    </div>
+                                    <div class="img-div">
+                                        <img src="" class="card-img-top" alt="" id="">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title" id=""></h5>
+                                        <p class="card-text" id=""></p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="card choice">
-                                <div class="card-header">
-                                    Sort Option 2
-                                </div>
-                                <div class="img-div">
-                                    <img src="" class="card-img-top" alt="" id="">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title" id=""></h5>
-                                    <p class="card-text" id=""></p>
+                            <div class="col-sm-6">
+                                <div class="card choice">
+                                    <div class="card-header">
+                                        Sort Option 2
+                                    </div>
+                                    <div class="img-div">
+                                        <img src="" class="card-img-top" alt="" id="">
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="card-title" id=""></h5>
+                                        <p class="card-text" id=""></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
 
@@ -156,8 +176,11 @@
                         <h5 class="card-title" id=""></h5>
                         <p class="card-text" id=""></p>
                     </div>
+
                 </div>
             </div>
+
+
         </div>
     </div>
 
@@ -165,13 +188,66 @@
         <input type="text" name="" id="user-name">
         <button class="btn btn-primary" type="submit" id="name-btn">Submit</button>
     </form>
+    <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Would you like to Save?</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                        <h5 class="card-title" id="">Food</h5>
+                        <p class="card-text test" id="saved-food"></p>
+                        <p class="card-text test" id="saved-food-address"></p>
+                        <h5 class="card-title" id="">Event</h5>
+                        <p class="card-text test" id="saved-event"></p>
+                        <p class="card-text test" id="save-event-buy"></p>
+                        <h5 class="card-title" id="">Exercise</h5>
+                        <p class="card-text" id="user-exercise"></p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" id="save-user-btn">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    <!-- <div class="card">
+            <div class="card-header" id="user-selected">
+               Would you like to Save?
+            </div>
+            <div class="save-img">
+                <img src="" class="card-img-top" alt="" id="">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title" id="">Food</h5>
+                <p class="card-text test" id="saved-food"></p>
+                <p class="card-text test" id="saved-food-address"></p>
+                <h5 class="card-title" id="">Event</h5>
+                <p class="card-text test" id="saved-event"></p>
+                <p class="card-text test" id="save-event-buy"></p>
+                <h5 class="card-title" id="">Exercise</h5>
+                <p class="card-text" id="user-exercise"></p>
+            </div>
+            <button class="btn btn-primary" type="submit" id="save-user-btn">Submit</button>
+        </div> -->
+
+
+
+
 
     <!-- Scripts -->
 
     <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
