--- a/index.html
+++ b/index.html
@@ -6,15 +6,144 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css"/>
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hello, world!</title>
 </head>
 
 <body>
 
+    <!-- Nav-->
+
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top justify-content-between">
+  <a class="navbar-brand" href="#">BRAND NAME</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Get Started</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Meet the Team</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<!--Jumbotron-->
+
+    <div class="carousel">
+      <div class="jumbotron jumbotron-city">
+        <h1>We know <span id="city-name">Dallas</span></h1>
+        <p>Just tell us where you want to go and we'll find you the best spots in town</p>
+      </div>
+      <div class="jumbotron jumbotron-food">
+        <h1>We know <span id="food-name">thai</span></h1>
+        <p>We find the best food of any kind, every time</p>
+      </div>
+      <div class="jumbotron jumbotron-events">
+        <h1>We know <span id="event-name">music</span></h1>
+        <p>Get out of that hotel room and see what's happening around you</p>
+      </div>
+      <div class="jumbotron jumbotron-activity">
+        <h1>We know <span id="activity-name">fitness</span></h1>
+        <p>Keep up with your workouts while you're on the road</p>
+      </div>
+    </div>
+    <div class="text-center button-wrapper">
+      <button class="btn btn-primary btn-large" data-toggle="modal" data-target="#startModal">Get Started</button>
+    </div>
+
+    <!-- Modals for User Preferences -->
+<div class="modal fade" id="startModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Welcome!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="container">
+          <label for="user-name">First, tell us your name:</label>
+          <input type="text" class="form-control" id="user-name">
+        </form>
+      </div>  
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#cityModal" id="name-btn">Next!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="cityModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Hi, <span id="user"></span>!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="container">
+          <div class="form-group">
+            <label for="user-city">Next, tell us where you're headed:</label>
+            <input type="text" class="form-control" id="user-city">
+            <label for="user-date">and when you'll be there:</label>
+            <input type="date" class="form-control" id="user-date">
+          </div>
+        </form>
+      </div>
+      
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#detailsModal" id="city-btn">Onward!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="detailsModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Just a few more questions...</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="container">
+          <div class="form-group">
+            <label for="user-food">What kind of food makes your mouth water?</label>
+            <input type="text" class="form-control" id="user-food">
+          </div>
+          <div class="form-group">
+            <label for="user-event">What's your favorite type of music?</label>
+            <input type="text" class="form-control" id="user-event">
+          </div>
+          <div class="form-group">
+            <label for="user-activity">How do you stay active?</label>
+            <input type="text" class="form-control" id="user-activity">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="choices-btn">Let's Go!</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <div class="container">
 
-            <div class="card">
+            <!-- <div class="card">
                     <div class="card-header" id="user-selected">
                         User Data
                     </div>
@@ -32,10 +161,10 @@
                         <p class="card-text" id="user-exercise"></p>
                     </div>
                     <button class="btn btn-primary" type="submit" id="save-user-btn">Submit</button>
-                </div>
+                </div> -->
 
         <!-- Form for user input -->
-        <div class="row">
+<!--         <div class="row">
             <form>
                 <label for="user-city">City</label>
                 <input type="text" id="user-city">
@@ -45,7 +174,7 @@
                 <input type="text" id="user-event">
                 <button class="btn btn-primary" type="submit" id="city-btn">Submit</button>
             </form>
-        </div>
+        </div> -->
 
         <div class="row">
             <div class="col-sm-8">
@@ -184,10 +313,13 @@
         </div>
     </div>
 
-    <form>
+<!--     <form>
         <input type="text" name="" id="user-name">
         <button class="btn btn-primary" type="submit" id="name-btn">Submit</button>
-    </form>
+    </form> -->
+
+    <!-- Save User Info -->
+
     <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -249,6 +381,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
