--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
 
-            <div class="card">
+            <!-- <div class="card">
                     <div class="card-header" id="user-selected">
                         User Data
                     </div>
@@ -32,7 +32,7 @@
                         <p class="card-text" id="user-exercise"></p>
                     </div>
                     <button class="btn btn-primary" type="submit" id="save-user-btn">Submit</button>
-                </div>
+                </div> -->
 
         <!-- Form for user input -->
         <div class="row">
@@ -207,6 +207,7 @@
                         <h5 class="card-title" id="">Exercise</h5>
                         <p class="card-text" id="user-exercise"></p>
                 </div>
+
                 <div class="modal-footer">
                   <button type="button" class="btn btn-primary" id="save-user-btn">Save changes</button>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
